--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,7 @@
         "APP_ENV": "production",
         "APP_DEBUG": "true",
         "APP_URL": "http://localhost",
+        "APP_KEY": "base64:KTfGUYRGk/cfBzzkKTUn12x7JPcVVCaEp59p12Egyxo=",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
